Add name and implement display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="calculatooor">
-
+        <div class="name">Calculatooor</div>
+        <div class="display-container">
+            <div class="display"></div>
+        </div>
     </div>
 </body>
 </html>
