Complete keypad design
Work on the UI is largely done here save some
tweaks here and there.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,32 @@
 <body>
     <div class="calculatooor">
         <div class="name">Calculatooor</div>
+        
         <div class="display-container">
             <div class="display"></div>
+        </div>
+
+        <div class="keypad">
+            <div class="backspace">Clear</div>
+            <div class="percentage">%</div>
+            <div class="plus-minus">+/-</div>
+            <div class="divide">/</div>
+            <div class="numbers">7</div>
+            <div class="numbers">8</div>
+            <div class="numbers">9</div>
+            <div class="multiply">X</div>
+            <div class="numbers">4</div>
+            <div class="numbers">5</div>
+            <div class="numbers">6</div>
+            <div class="minus">-</div>
+            <div class="numbers">1</div>
+            <div class="numbers">2</div>
+            <div class="numbers">3</div>
+            <div class="plus">+</div>
+            <div class="reset">C</div>
+            <div class="numbers">0</div>
+            <div class="decimal">.</div>
+            <div class="equal-to">=</div>
         </div>
     </div>
 </body>
